--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,8 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <!--шапка сайта-->
-
+    <!--шапка-->
     <header>
       <nav>
         <a href="/"> Web Studio </a>
@@ -295,15 +294,17 @@
         <a href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
 
-      <p>присоединяйтесь</p>
+      <b>присоединяйтесь</b>
       <ul>
         <li><a href="">instagram</a></li>
         <li><a href="">twitter</a></li>
         <li><a href="">facebook</a></li>
         <li><a href="">linkedin</a></li>
       </ul>
-      <p>Подпишитесь на рассылку</p>
+      <b>Подпишитесь на рассылку</b> <br />
+      <a href="">E-mail</a>
+      <a href="">Подписаться</a>
       <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
-</html> -->
+</html>
