--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
       <div>
         <section>
           <h1>
-            <img src="./images/img.jpg" alt="" width="1600" /> ЭФФЕКТИВНЫЕ
-            РЕШЕНИЯ
-            <br />
+            ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
             ДЛЯ ВАШЕГО БИЗНЕСА
-            <a href="">Заказать услугу</a>
           </h1>
+          <a href="">Заказать услугу</a>
         </section>
         <section>
           <ul>
@@ -97,6 +95,7 @@
           <h2>Чем мы занимаемся</h2>
           <ul>
             <li>
+              <h3>Десктопные приложения</h3>
               <img
                 src="./images/box1.png"
                 alt="Десктопные приложения"
@@ -105,6 +104,7 @@
               />
             </li>
             <li>
+              <h3>Мобильные приложения</h3>
               <img
                 src="./images/box2.png"
                 alt="Мобильные приложения"
@@ -113,6 +113,7 @@
               />
             </li>
             <li>
+              <h3>Дизайнерские решения</h3>
               <img
                 src="./images/box3.png"
                 alt="Дизайнерские решения"
@@ -287,23 +288,26 @@
     </main>
     <!--Футер-->
     <footer>
-      <a href="/"> Web Studio </a>
-      <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
-      </address>
-
-      <b>присоединяйтесь</b>
-      <ul>
-        <li><a href="">instagram</a></li>
-        <li><a href="">twitter</a></li>
-        <li><a href="">facebook</a></li>
-        <li><a href="">linkedin</a></li>
-      </ul>
-      <b>Подпишитесь на рассылку</b> <br />
-      <a href="">E-mail</a>
-      <a href="">Подписаться</a>
+      <div>
+        <a href="/"> Web Studio </a>
+        <address>
+          <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <a href="mailto:info@example.com">info@example.com</a>
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>
+      </div>
+      <div>
+        <b>присоединяйтесь</b>
+        <ul>
+          <li><a href="">instagram</a></li>
+          <li><a href="">twitter</a></li>
+          <li><a href="">facebook</a></li>
+          <li><a href="">linkedin</a></li>
+        </ul>
+      </div>
+      <div>
+        <b>Подпишитесь на рассылку</b>
+      </div>
       <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
