--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
         <li><button type="button">Дизайн</button></li>
         <li><button type="button">Маркетинг</button></li>
       </ul>
-      <!--     -->
+      <!--  список   -->
       <ul>
         <li>
           <img src="./images/portfolio/img.jpg" alt="" />
